optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_strip_exports_unused.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
import mongodb from 'mongodb';

export const onGet = () => {
	const data = mongodb.collection.whatever;
	return {
		body: {
		data
		}
	}
};

export default component$(()=> {
	return <div>cmp</div>
});

============================= test.tsx_component_ZUK1E201Ins.tsx (ENTRY POINT)==

export const component_ZUK1E201Ins = ()=>{
	return <div>cmp</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_ZUK1E201Ins",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "ZUK1E201Ins",
  "canonicalFilename": "test.tsx_component_ZUK1E201Ins",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    213,
    244
  ]
}
*/
============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
import mongodb from "mongodb";
const i_ZUK1E201Ins = ()=>import("./test.tsx_component_ZUK1E201Ins");
export const onGet = ()=>{
	const data = mongodb.collection.whatever;
	return { body: { data } };
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ZUK1E201Ins, "component_ZUK1E201Ins"));


None
== DIAGNOSTICS ==

[]
