optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_transpile_jsx_only.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props) => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= ./example_transpile_jsx_only.tsx_App_component_Qk2mU66h51I.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
export const App_component_Qk2mU66h51I = (props) => {
	return _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", { on:click: qrl(i_App_component_Cmp_p_onClick, "App_component_Cmp_p_onClick") }, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
};


None
/*
{
  "origin": "example_transpile_jsx_only.tsx",
  "name": "App_component_Qk2mU66h51I",
  "entry": null,
  "displayName": "example_transpile_jsx_only.tsx_App_component",
  "hash": "Qk2mU66h51I",
  "canonicalFilename": "example_transpile_jsx_only.tsx_App_component_Qk2mU66h51I",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_Qk2mU66h51I",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= example_transpile_jsx_only.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_App_component_Cmp_p_onClick = () => import("./example_transpile_jsx_only.tsx.js");
const i_App_component_Qk2mU66h51I = () => import("./example_transpile_jsx_only.tsx_App_component_Qk2mU66h51I.js");
export const App = componentQrl(qrl(i_App_component_Qk2mU66h51I, "App_component_Qk2mU66h51I"));


None
== DIAGNOSTICS ==

[]
