optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_transpile_ts_only.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---


import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    return <Cmp>
			<p class="stuff" on:click={/*#__PURE__*/ inlinedQrl(()=>console.log('warn'), "App_component_Cmp_p_on_click_9VylW0qB00s")}>Hello Qwik</p>
		</Cmp>;
}, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,sCAAW,CAAC;IAC9B,QACE,IAAI;GACJ,CAAC,EAAE,MAAM,QAAQ,mCAAU,IAAM,QAAQ,GAAG,CAAC,sDAAS,UAAU,EAAE,EAAE;EACrE,EAAE;AAEJ,iCAAG\"}")
== DIAGNOSTICS ==

[]
