optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_ts_enums.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export enum Thing {
	A,
	B
}

export const App = component$(() => {
	console.log(Thing.A);
	return (
		<>
			<p class="stuff">Hello Qwik</p>
		</>
	);
});

============================= ./example_ts_enums.tsx_App_component_dJGwfeLInpY.js (ENTRY POINT)==

import { Thing } from "./example_ts_enums";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App_component_dJGwfeLInpY = () => {
	console.log(Thing.A);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("p", null, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
};


None
/*
{
  "origin": "example_ts_enums.tsx",
  "name": "App_component_dJGwfeLInpY",
  "entry": null,
  "displayName": "example_ts_enums.tsx_App_component",
  "hash": "dJGwfeLInpY",
  "canonicalFilename": "example_ts_enums.tsx_App_component_dJGwfeLInpY",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_dJGwfeLInpY",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= example_ts_enums.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
export let Thing = /*#__PURE__*/ function(Thing) {
	Thing[Thing["A"] = 0] = "A";
	Thing[Thing["B"] = 1] = "B";
	return Thing;
}({});
export const App = componentQrl(qrl(() => import("./example_ts_enums.tsx_App_component_dJGwfeLInpY.js"), "App_component_dJGwfeLInpY"));


None
== DIAGNOSTICS ==

[]
