optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_ts_enums_issue_1341.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

enum Thing {
	A,
	B
}

export const App = component$(() => {
	console.log(Thing.A);
	return (
		<>
			<p class="stuff">Hello Qwik</p>
		</>
	);
});

============================= test.tsx_test_App_component_jYXJI01qFIU.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const test_App_component_jYXJI01qFIU = ()=>{
	const [Thing] = useLexicalScope();
	console.log(Thing.A);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("p", null, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_App_component_jYXJI01qFIU",
  "entry": null,
  "displayName": "test_App_component",
  "hash": "jYXJI01qFIU",
  "canonicalFilename": "test.tsx_test_App_component_jYXJI01qFIU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    109,
    201
  ]
}
*/
============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_jYXJI01qFIU = ()=>import("./test.tsx_test_App_component_jYXJI01qFIU");
var Thing = /*#__PURE__*/ function(Thing) {
	Thing[Thing["A"] = 0] = "A";
	Thing[Thing["B"] = 1] = "B";
	return Thing;
}(Thing || {});
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_jYXJI01qFIU, "test_App_component_jYXJI01qFIU", [Thing]));


None
== DIAGNOSTICS ==

[]
