optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_use_optimization.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useTask$ } from '@qwik.dev/core';
import { CONST } from 'const';
export const Works = component$((props) => {
	const {countNested} = useStore({value:{count:0}}).value;
	const countNested2 = countNested;
	const {hello} = countNested2;
	const bye = hello.bye;
	const {ciao} = bye.italian;


	return (
		<div ciao={ciao} >{foo}</div>
	);
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_qX3vIioPG0E = ()=>import("./test.tsx_test_Works_component_qX3vIioPG0E");
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_qX3vIioPG0E, "test_Works_component_qX3vIioPG0E"));


None
============================= test.tsx_test_Works_component_qX3vIioPG0E.tsx (ENTRY POINT)==

export const test_Works_component_qX3vIioPG0E = (props)=>{
	const { countNested } = useStore({ value: { count: 0 } }).value;
	const countNested2 = countNested;
	const { hello } = countNested2;
	const bye = hello.bye;
	const { ciao } = bye.italian;
	return <div ciao={ciao}>{foo}</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_Works_component_qX3vIioPG0E",
  "entry": "entry_segments",
  "displayName": "test_Works_component",
  "hash": "qX3vIioPG0E",
  "canonicalFilename": "test.tsx_test_Works_component_qX3vIioPG0E",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    121,
    360
  ]
}
*/
== DIAGNOSTICS ==

[]
